test/parse/expr/bad-loop-sig-multi.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    loop (result i32 i32)
      i32.const 1
      i32.const 2
    end
    drop
    drop)

  (func
    i32.const 0
    loop (param i32)
      drop
    end))
(;; STDERR ;;;
out/test/parse/expr/bad-loop-sig-multi.txt:5:5: error: multiple result values not currently supported.
    loop (result i32 i32)
    ^^^^
out/test/parse/expr/bad-loop-sig-multi.txt:14:5: error: loop params not currently supported.
    loop (param i32)
    ^^^^
;;; STDERR ;;)
